add basic layout for pricing. some bugs need fixing in css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,3 +25,6 @@
   border-radius: 2rem !important;
   background-color: blue !important;
 }
+.statistic-graph-container img {
+  max-width: 90vw;
+}
