--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap');
+
 .dashboard-image  img{
   width: 90vw;
   height: auto;
@@ -16,10 +18,7 @@
   width: 90%;
   height: auto;
 }
-.hiw-card-image img {
-  width: 275px;
-  height: auto;
-}
+
 .activeSpendButton{
   padding: 10px 20px !important;
   border-radius: 2rem !important;
